--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = resources/pagedown
 	url = https://github.com/DMOJ/dmoj-pagedown.git
 	branch = master
-[submodule "resources/libs"]
-	path = resources/libs
+[submodule "resources/prebundled"]
+	path = resources/prebundled
 	url = https://github.com/DMOJ/site-assets.git
 	branch = master
