--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@commander-js/extra-typings": "11.0.0",
     "commander": "11.0.0",
     "flatpickr": "4.6.13",
+    "moment": "2.29.4",
     "ws": "8.14.0"
   },
   "devDependencies": {
