--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "browserslist": "> 0.25%, not dead",
   "dependencies": {
     "@commander-js/extra-typings": "11.0.0",
+    "chart.js": "4.4.0",
     "commander": "11.0.0",
     "flatpickr": "4.6.13",
     "moment": "2.29.4",
