--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@commander-js/extra-typings": "11.0.0",
     "chart.js": "4.4.0",
     "commander": "11.0.0",
+    "diff": "5.1.0",
+    "diff2html": "3.4.44",
     "flatpickr": "4.6.13",
     "js-cookie": "3.0.5",
     "moment": "2.29.4",
@@ -21,10 +23,12 @@
     "ws": "8.14.0"
   },
   "devDependencies": {
+    "@types/diff": "5.0.5",
     "@types/jquery": "3.5.19",
     "@types/js-cookie": "3.0.4",
     "@types/mathjax": "0.0.37",
     "@types/semver": "7.5.2",
+    "@types/tablesorter": "2.31.3",
     "@types/ws": "8.5.5",
     "@typescript-eslint/eslint-plugin": "6.7.2",
     "@typescript-eslint/parser": "6.7.2",
