--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@commander-js/extra-typings": "11.0.0",
     "chart.js": "4.4.0",
+    "chartjs-adapter-moment": "1.0.1",
     "commander": "11.0.0",
     "diff": "5.1.0",
     "diff2html": "3.4.44",
